--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,8 +20,9 @@ body {
     align-items: center;
     input{
       margin: 1em;
+      padding: 1em;
+      border-radius: 0.2em;
       border: none;
-      border-radius: 1em;
       text-align: center;
     }
     .btn{
