--- a/src/styles.css
+++ b/src/styles.css
@@ -21,8 +21,9 @@ body {
 }
 .app .container input {
   margin: 1em;
+  padding: 1em;
+  border-radius: 0.2em;
   border: none;
-  border-radius: 1em;
   text-align: center;
 }
 .app .container .btn {
